--- a/LoginUIproject.css
+++ b/LoginUIproject.css
@@ -4,7 +4,7 @@ body{
     background-repeat: no-repeat;
     background: url(https://i.pinimg.com/originals/7c/9f/54/7c9f546821e6ce60ba274c302894b60c.jpg);
     */see notes*/
-{
+}
 
 .container {
     border: solid;
